# resources/views/emails/verification.blade.php
@@ -1,0 +1,37 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Reset Password</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 10px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #333333;
+        }
+        p {
+            color: #000000;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <p>Token: {{$url}}</p>
+
+        <p>Best regards,</p>
+        <p>Lialili Studio</p>
+        <p>0938253684</p>
+        <p>www.lialili.com</p>
+    </div>
+</body>
+</html>
